--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -268,6 +268,9 @@ $red500: #EE5454;
         gap: 40px;
         width: calc(100vw - 48px);
         .top-left-flex {
+            &#question {
+                width: calc(100vw - 48px);
+            }
             h1 {
                 font-size: 40px;
             }
