--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,9 +15,10 @@
 #main {
   background-color: #F4F6FA;
   background-image: url("../assets/images/pattern-background-desktop-light.svg");
-  background-repeat: round;
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding: 40px 0px;
   display: flex;
   justify-content: center;
