--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -40,9 +40,10 @@ $red500: #EE5454;
 #main {
     background-color: $grey50;
     background-image: url('../assets/images/pattern-background-desktop-light.svg');
-    background-repeat: round;
+    background-repeat: no-repeat;
+    background-size: cover;
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     padding: 40px 0px;
     @include flex(center, center, column);
 }
