--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -295,6 +295,9 @@ $red500: #EE5454;
             }
         }
     }
+    .quiz-title {
+        font-size: 18px;
+    }
 }
 
 //////////////////////////////////////////////////////////////////////////////////////////////
